# vs2dt

./: .gitignore  README.md  meson.build  pixi.toml
.github/workflows/: ci.yml  cicd.yml  compilers.yml
src/: meson.build  vs2dt3_3.f
src/include/: c_trxx.inc  d_BFAlloc.inc~  d_cleanup.inc  d_modules.inc~
